tests/errors/err_missing_bang_mutating_method.mix
// ERROR: method 'update' is mutating
shape Sprite
    x: float

    update(dt: float) !
        x = x + dt

main()
    s! = Sprite(x: 1.0)
    s.update(2.0)
